--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -2,19 +2,20 @@
 
 .header {
   background-color: transparent;
-  //   background-color: white;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 100;
+  // background-color: white;
   display: flex;
   font-size: 2rem;
   color: var(--grey-light-1);
+  background-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.7),
+    rgba(0, 0, 0, 0.7)
+  );
   nav {
     display: flex;
     width: 30%;
     align-items: center;
-    justify-content: space-between;
+    // justify-content: space-between;
     padding-left: 1rem;
   }
   &__logo {
@@ -28,7 +29,7 @@
   }
 
   &__link {
-    padding: 4rem;
+    padding-top: 4rem;
     a {
       text-decoration: none;
       margin-left: 3rem;
@@ -38,7 +39,71 @@
       color: var(--grey-light-1);
     }
     a:hover {
-      font-size: 3rem;
+      font-size: 2.5rem;
+    }
+  }
+}
+
+@media only screen and (max-width: 1383px) {
+  .header__link {
+    // padding: 4rem;
+    a {
+      text-decoration: none;
+      // margin-left: 3rem;
+      display: flex;
+    }
+    a:link,
+    :visited {
+      color: var(--grey-light-1);
+    }
+    a:hover {
+      font-size: 2.5rem;
+    }
+  }
+}
+
+@media only screen and (max-width: 642px) {
+  .header {
+    background-color: transparent;
+    // background-color: white;
+    display: flex;
+    flex-direction: column;
+    // justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+    color: var(--grey-light-1);
+    background-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.7),
+      rgba(0, 0, 0, 0.7)
+    );
+    nav {
+      display: flex;
+      width: 40%;
+      align-items: center;
+      // justify-content: space-between;
+      // padding-left: 1rem;
+    }
+    &__logo {
+      background-image: url(../../images/logo.jpg);
+      background-size: cover;
+      border-radius: 3rem;
+      width: 1rem;
+      height: 1rem;
+      cursor: pointer;
+    }
+
+    &__link {
+      a {
+        text-decoration: none;
+      }
+      a:link,
+      :visited {
+        color: var(--grey-light-1);
+      }
+      a:hover {
+        font-size: 2.5rem;
+      }
     }
   }
 }
