--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,7 @@
 :root {
   //Colors
   --grey-light-1: #faf9f9;
+  --grey-dark-1: #333;
 
   //Shadows
   --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.2);
