--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -29,17 +29,25 @@
   }
 
   &__link {
-    padding-top: 4rem;
-    a {
-      text-decoration: none;
-      margin-left: 3rem;
+    float: right;
+    // padding-left: 20rem;
+    button {
+      position: relative;
+      margin-top: 3.5rem;
+      background-color: #f8cb00;
+      padding: 1rem;
+      border: none;
+      outline: none;
+      border-radius: 1rem;
+      color: var(--grey-dark-1);
+      cursor: pointer;
+      font-weight: bold;
+      font-size: 1rem;
+      width: 200px;
+      height: 3rem;
     }
-    a:link,
-    :visited {
-      color: var(--grey-light-1);
-    }
-    a:hover {
-      font-size: 2.5rem;
+    button:hover {
+      background-color: #ffe055;
     }
   }
 }
