--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -13,7 +13,7 @@
     font-size: 3rem;
     // display: inline-block;
   }
-  width: 40rem;
+  max-width: 40%;
   text-transform: uppercase;
 }
 
@@ -22,7 +22,7 @@
   button {
     margin-top: 3rem;
     background-color: #f8cb00;
-    padding: 1rem 2rem;
+    padding: 1rem 1rem;
     border: none;
     outline: none;
     border-radius: 3rem;
@@ -30,7 +30,7 @@
     cursor: pointer;
     font-weight: bold;
     font-size: 1.5rem;
-    width: 35%;
+    width: 250px;
     height: 4rem;
   }
   button:hover {
@@ -44,7 +44,24 @@
       font-size: 3rem;
       // display: inline-block;
     }
-    width: 25rem;
+    max-width: 100%;
+    padding: 1rem;
     text-transform: uppercase;
+  }
+
+  .movies-button {
+    width: 90%;
+    button {
+      width: 200px;
+    }
+  }
+
+  .home-logo {
+    background-image: url(../../images/logo.jpg);
+    background-size: cover;
+    border-radius: 30rem;
+    height: 9rem;
+    width: 9rem;
+    margin: 2rem;
   }
 }
