--- a/src/components/ListOfGames/listOfGames.scss
+++ b/src/components/ListOfGames/listOfGames.scss
@@ -28,13 +28,14 @@
     padding-top: 1rem;
     padding: 10px;
     max-width: 100%;
-    height: 3rem;
-    opacity: 0.5;
+    height: 4rem;
+    opacity: 0.6;
 
     p {
       width: 100%;
       color: var(--grey-dark-1);
-      font-size: 0.8rem;
+      font-size: 1rem;
+      font-weight: bolder;
     }
   }
 }
