--- a/src/components/GameDetail/gameDetail.scss
+++ b/src/components/GameDetail/gameDetail.scss
@@ -33,3 +33,25 @@
     height: 18rem;
   }
 }
+
+@media only screen and (max-width: 635px) {
+  .game {
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &__container {
+      border-radius: 20px;
+      padding: 0.5rem;
+      background: transparent;
+      width: 20rem;
+    }
+
+    &__title {
+      font-size: 3rem;
+      color: white;
+      margin-bottom: 1rem;
+    }
+  }
+}
