--- a/src/components/ListOfGames/listOfGames.scss
+++ b/src/components/ListOfGames/listOfGames.scss
@@ -1,4 +1,4 @@
-@import "../../styles/variables";
+@import '../../styles/variables';
 .movie {
   min-width: 20rem;
   min-height: 30rem;
@@ -6,10 +6,10 @@
 
   &__container {
     display: inline-block;
-    width: 180px;
-    height: 17rem;
+    width: 220px;
+    height: 19rem;
     margin-right: 10px;
-    margin-top: 4rem;
+    // margin-top: 4rem;
     font-size: 20px;
     cursor: pointer;
     transform-origin: center left;
