--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,4 +1,4 @@
-@import "../../styles/variables";
+@import '../../styles/variables';
 
 .header {
   background-color: transparent;
@@ -45,6 +45,7 @@
       font-size: 1rem;
       width: 200px;
       height: 3rem;
+      margin-left: 1rem;
     }
     button:hover {
       background-color: #ffe055;
