--- a/src/components/Layout/layout.scss
+++ b/src/components/Layout/layout.scss
@@ -14,7 +14,8 @@
     // justify-content: center;
     align-items: center;
     flex-direction: column;
-    min-height: 100vh;
+    // min-height: 100vh;
+    padding-bottom: 6rem;
     background-image: linear-gradient(
       to bottom,
       rgba(0, 0, 0, 0.7),
