fixing some structure

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -4,6 +4,7 @@
   background-color: black;
   padding: 1.5rem;
   border-top: 0.3rem solid white;
+  min-height: 9rem;
 
   &__right {
     flex-basis: 50%;
