--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 .content {
-  background-image: url(../../images/collage.png);
+  background-image: url(../images/collage.png);
   background-size: cover;
   background-position: center;
   color: var(--grey-light-1);
