--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,4 +1,4 @@
-@import '../../styles/variables';
+@import './variables';
 
 .header {
   background-color: transparent;
@@ -19,7 +19,7 @@
     padding-left: 1rem;
   }
   &__logo {
-    background-image: url(../../images/logo.jpg);
+    background-image: url(../images/logo.jpg);
     background-size: cover;
     border-radius: 3rem;
     width: 6rem;
@@ -94,7 +94,7 @@
       // padding-left: 1rem;
     }
     &__logo {
-      background-image: url(../../images/logo.jpg);
+      background-image: url(../images/logo.jpg);
       background-size: cover;
       border-radius: 3rem;
       width: 1rem;
