--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,5 +1,5 @@
 .home-logo {
-  background-image: url(../../images/logo.jpg);
+  background-image: url(../images/logo.jpg);
   background-size: cover;
   border-radius: 30rem;
   height: 15rem;
@@ -57,7 +57,7 @@
   }
 
   .home-logo {
-    background-image: url(../../images/logo.jpg);
+    background-image: url(../images/logo.jpg);
     background-size: cover;
     border-radius: 30rem;
     height: 9rem;
