--- a/src/styles/gameDetail.scss
+++ b/src/styles/gameDetail.scss
@@ -71,3 +71,39 @@
     color: rgb(255, 225, 170);
   }
 }
+.input {
+  display: block;
+  width: 100%;
+  color: white;
+  border: 1px solid #cbd5e0;
+  line-height: 1.25;
+  background-color: white;
+  padding: 0.75rem;
+  background-color: transparent;
+  border: solid snow;
+  border-radius: 10px;
+  outline: none;
+}
+
+::placeholder {
+  color: white;
+}
+
+.create-button {
+  background-color: #f19935;
+  padding: 1rem 2rem;
+  border: none;
+  border-radius: 1rem;
+  color: white;
+  cursor: pointer;
+  font-weight: bold;
+  width: 100%;
+  display: block;
+  margin-top: 1rem;
+  justify-content: center;
+  outline: none;
+}
+
+.create-button:hover {
+  background-color: #f3b36a;
+}
