--- a/src/styles/listOfGames.scss
+++ b/src/styles/listOfGames.scss
@@ -1,17 +1,14 @@
 @import './variables';
 .movie {
-  min-width: 20rem;
-  min-height: 30rem;
-  // padding-bottom: 3rem;
-  // padding-top: 3rem;
+  width: 100%;
+  height: 100%;
   padding: 4rem 12rem 3rem 12rem;
 
   &__container {
-    display: inline-block;
+    display: inline-table;
     width: 220px;
     height: 19rem;
     margin-right: 10px;
-    // margin-top: 4rem;
     font-size: 20px;
     cursor: pointer;
     transform-origin: center left;
